Moving some things around and turning groceries view into check list

--- a/app/src/main/res/layout/list_grocery_card.xml
+++ b/app/src/main/res/layout/list_grocery_card.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -9,7 +10,7 @@
             type="android.view.View.OnClickListener"/>
         <variable
             name="viewModel"
-            type="com.semblanceoffunctionality.grocery.ui.grocerylist.GroceryWantedItemsViewModel"/>
+            type="com.semblanceoffunctionality.grocery.ui.grocerylist.GroceryItemsViewModel"/>
     </data>
 
     <com.semblanceoffunctionality.grocery.views.MaskedCardView
@@ -27,17 +28,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <CheckBox
+                android:id="@+id/check_item"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:checked="@{viewModel.obtained}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
             <TextView
                 android:id="@+id/item_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_normal"
-                android:gravity="center_horizontal"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:gravity="center"
                 android:text="@{viewModel.itemName}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                app:layout_constraintStart_toEndOf="@+id/check_item"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Grocery Item" />
+
+            <TextView
+                android:id="@+id/item_quantity"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:text="@{viewModel.quantity}"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="0"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
