--- a/app/src/main/res/layout/fragment_all_items.xml
+++ b/app/src/main/res/layout/fragment_all_items.xml
@@ -7,7 +7,7 @@
     <data>
 
         <variable
-                name="hasItemings"
+                name="hasItems"
                 type="boolean" />
 
     </data>
@@ -24,35 +24,36 @@
                 android:layout_marginStart="@dimen/card_side_margin"
                 android:layout_marginEnd="@dimen/card_side_margin"
                 android:layout_marginTop="@dimen/margin_normal"
-                app:isGone="@{!hasItemings}"
+                app:isGone="@{!hasItems}"
                 app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                 app:spanCount="@integer/grid_columns"
-                tools:listitem="@layout/list_item_grocery_iteming"/>
+                tools:listitem="@layout/list_item_card"/>
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical"
-                app:isGone="@{hasItemings}">
+                app:isGone="@{hasItems}">
 
             <TextView
                     android:id="@+id/empty_grocery"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/grocery_empty"
+                    android:text="@string/items_empty"
                     android:textAppearance="?attr/textAppearanceHeadline5" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/add_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?attr/colorPrimary"
-                android:text="@string/add_item"
-                app:backgroundTint="?attr/colorOnPrimary"
-                app:shapeAppearance="@style/ShapeAppearance.Grocery.Button.Add"/>
-
         </LinearLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/add_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?attr/colorPrimary"
+            android:layout_gravity="bottom|center"
+            android:text="@string/add_item"
+            app:backgroundTint="?attr/colorOnPrimary"
+            app:shapeAppearance="@style/ShapeAppearance.Grocery.Button.Add"/>
 
     </FrameLayout>
 
