--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             />
 
         <item
-            android:id="@+id/nav_all_groceries"
+            android:id="@+id/nav_all_items"
             android:title="@string/item_list_title"
             />
 
