--- a/app/src/main/res/layout/fragment_store_list.xml
+++ b/app/src/main/res/layout/fragment_store_list.xml
@@ -4,6 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="hasStores"
+            type="boolean" />
+    </data>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,6 +26,22 @@
             app:spanCount="@integer/grid_columns"
             tools:context=".MainActivity"
             tools:listitem="@layout/store_list_item"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:isGone="@{hasStores}">
+
+            <TextView
+                android:id="@+id/empty_grocery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/store_empty"
+                android:textAppearance="?attr/textAppearanceHeadline5" />
+
+        </LinearLayout>
 
 
         <com.google.android.material.button.MaterialButton
