--- a/app/src/main/res/layout/list_grocery_card.xml
+++ b/app/src/main/res/layout/list_grocery_card.xml
@@ -42,7 +42,7 @@
                 android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:gravity="center"
-                android:text="@{viewModel.itemName}"
+                android:text="@{viewModel.name}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 app:layout_constraintStart_toEndOf="@+id/check_item"
                 app:layout_constraintTop_toTopOf="parent"
