--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -48,6 +48,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
+            <TextView
+                android:id="@+id/item_quantity"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                app:layout_constraintTop_toBottomOf="@id/fab_add"
+                app:layout_constraintStart_toStartOf="@id/fab_add"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:gravity="center"
+                android:text="@{viewModel.item.quantityString()}"
+                tools:text="0"
+                />
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_remove"
                 style="@style/Widget.MaterialComponents.FloatingActionButton"
@@ -55,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/fab_margin"
                 app:shapeAppearance="@style/ShapeAppearance.Grocery.FAB"
-                app:layout_constraintTop_toBottomOf="@id/fab_add"
+                app:layout_constraintTop_toBottomOf="@id/item_quantity"
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/ic_minus"
                 android:outlineSpotShadowColor="@color/design_default_color_on_primary"
