--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,5 +37,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="tool_bar_height">48dp</dimen>
+    <dimen name="clickable_layout_bottom_padding_expanded">8dp</dimen>
 
 </resources>
