Fixed store not being passed to store grocery page

--- a/app/src/main/res/layout/list_grocery_item_status.xml
+++ b/app/src/main/res/layout/list_grocery_item_status.xml
@@ -69,7 +69,7 @@
             <include
                 layout="@layout/status_buttons"
                 android:id="@+id/status_buttons"
-                app:stockStatus="@{stockStatus}"
+                app:stockStatus="@{viewModel.stockStatus}"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
