--- a/app/src/main/res/layout/fragment_store_grocery.xml
+++ b/app/src/main/res/layout/fragment_store_grocery.xml
@@ -27,19 +27,19 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="100dp"
             android:layout_margin="@dimen/margin_normal">
 
             <TextView
                 android:id="@+id/store_detail_name"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="100dp"
                 android:layout_marginStart="@dimen/margin_small"
                 android:layout_marginEnd="@dimen/margin_small"
                 android:gravity="center"
                 android:clickable="true"
                 android:focusable="true"
-                android:text="@{viewModel.store.name}"
+                android:text="@{viewModel.storeName}"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,12 +62,29 @@
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:isGone="@{hasItems}">
+
+            <TextView
+                android:id="@+id/empty_grocery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/store_grocery_empty"
+                android:textAppearance="?attr/textAppearanceHeadline5" />
+
+        </LinearLayout>
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/store_grocery_list"
             android:layout_gravity="bottom"
             app:layout_anchor="@id/potential_stocked_label"
             android:layout_width="match_parent"
-            android:layout_height="600dp"
+            android:layout_height="500dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:spanCount="@integer/grid_columns"
             tools:listitem="@layout/list_grocery_item_status"/>
@@ -76,7 +93,7 @@
             android:id="@+id/not_stocked_toolbar"
             android:layout_gravity="bottom"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="100dp"
             android:text="@string/unstocked_list"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
