--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,9 @@
         <item
             android:id="@+id/nav_store_list"
             android:title="@string/store_list_title" />
+
+        <item
+            android:id="@+id/nav_data"
+            android:title="@string/nav_data" />
     </group>
 </menu>
