--- a/app/src/main/res/navigation/nav_grocery.xml
+++ b/app/src/main/res/navigation/nav_grocery.xml
@@ -88,4 +88,11 @@
             app:argType="string" />
     </fragment>
 
+    <fragment
+        android:id="@+id/nav_data"
+        android:name="com.semblanceoffunctionality.grocery.ui.data.DataFragment"
+        android:label="@string/data"
+        tools:layout="@layout/fragment_data" >
+    </fragment>
+
 </navigation>
