--- a/app/src/main/res/navigation/nav_grocery.xml
+++ b/app/src/main/res/navigation/nav_grocery.xml
@@ -63,6 +63,9 @@
         <argument
             android:name="name"
             app:argType="string" />
+        <action
+            android:id="@+id/action_nav_item_detail_self"
+            app:destination="@id/nav_item_detail" />
     </fragment>
 
     <fragment
