Also fixing store edit name flow

--- a/app/src/main/res/navigation/nav_grocery.xml
+++ b/app/src/main/res/navigation/nav_grocery.xml
@@ -89,6 +89,9 @@
         <argument
             android:name="store"
             app:argType="string" />
+        <action
+            android:id="@+id/action_nav_store_detail_self"
+            app:destination="@id/nav_store_detail" />
     </fragment>
 
     <fragment
