--- a/app/src/main/res/navigation/nav_grocery.xml
+++ b/app/src/main/res/navigation/nav_grocery.xml
@@ -62,6 +62,9 @@
         <action
             android:id="@+id/action_nav_item_detail_to_nav_all_items"
             app:destination="@id/nav_all_items" />
+        <action
+            android:id="@+id/action_nav_item_detail_to_nav_store_detail"
+            app:destination="@id/nav_store_detail" />
     </fragment>
 
     <fragment
@@ -85,6 +88,9 @@
         <action
             android:id="@+id/action_nav_store_detail_to_nav_store_list"
             app:destination="@id/nav_store_list" />
+        <action
+            android:id="@+id/action_nav_store_detail_to_nav_item_detail"
+            app:destination="@id/nav_item_detail" />
     </fragment>
 
     <fragment
