--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -2,17 +2,25 @@
 
     <!-- To see how these attributes are used, please visit https://material.io/develop/android/theming/color/ -->
     <style name="Base.Theme.Grocery" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/grocery_green_900</item>
-        <item name="colorOnPrimary">@color/grocery_yellow_300</item>
-        <item name="colorPrimaryDark">@color/grocery_gray_50_a600</item>
+        <item name="colorPrimary">@color/grocery_green_500</item>
+        <item name="colorOnPrimary">@color/grocery_green_300</item>
+        <item name="colorPrimaryDark">@color/grocery_green_500</item>
         <item name="colorOnSurface">@color/grocery_white</item>
-        <item name="colorAccent">@color/grocery_green_300</item>
-        <item name="colorSurface">@color/grocery_green_900</item>
-        <item name="colorSecondary">@color/grocery_yellow_300</item>
+        <item name="colorAccent">@color/grocery_green_500</item>
+        <item name="colorSurface">@color/gray</item>
+        <item name="colorSecondary">@color/grocery_green_300</item>
         <item name="android:colorBackground">@color/grocery_green_900</item>
+
+        <item name="floatingActionButtonStyle">@style/MyButton</item>
     </style>
 
     <style name="Theme.Grocery" parent="Base.Theme.Grocery"/>
+
+    <style name="Base.Theme.Grocery.NavigationView">
+        <item name="android:textColorSecondary">@color/grocery_white</item>
+        <item name="android:textColorPrimary">@color/grocery_white</item>
+        <item name="android:textColor">@color/grocery_white</item>
+    </style>
 
     <style name="Theme.Grocery.NoActionBar">
         <item name="windowActionBar">false</item>
