--- a/app/src/main/res/values-v29/shape.xml
+++ b/app/src/main/res/values-v29/shape.xml
@@ -4,9 +4,9 @@
     <style name="ShapeAppearance.Grocery.FAB" parent="ShapeAppearance.MaterialComponents">
         <item name="cornerFamily">rounded</item>
 
-        <item name="cornerSizeTopLeft">0dp</item>
+        <item name="cornerSizeTopLeft">@dimen/fab_corner_radius</item>
         <item name="cornerSizeTopRight">@dimen/fab_corner_radius</item>
-        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomRight">@dimen/fab_corner_radius</item>
         <item name="cornerSizeBottomLeft">@dimen/fab_corner_radius</item>
     </style>
 
