Changed add_item to create_item
Took 19 minutes

--- a/app/src/main/res/layout/fragment_groceries.xml
+++ b/app/src/main/res/layout/fragment_groceries.xml
@@ -71,11 +71,11 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/add_item"
+            android:id="@+id/create_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:text="@string/add_item"
+            android:text="@string/create_item"
             app:shapeAppearance="@style/ShapeAppearance.Grocery.Button.Add"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
